--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   background-color: #ffffff;
-  overflow-y: hidden;
+  height: 100vh;
 }
 
 header h2 {
@@ -22,15 +22,14 @@ header h2 {
 }
 
 .main-container {
-  height: 100vh;
   background-color: #efefee;
 }
 
 .card-container {
   float: left;
+  height: 20rem;
   width: 70%;
   display: flex;
-  height: 450px;
   flex-direction: row;
   flex-wrap: wrap;
 }
@@ -70,7 +69,6 @@ header h2 {
   width: 30%;
   display: flex;
   flex-direction: column;
-  height: 700px;
 }
 
 button {
@@ -90,6 +88,7 @@ footer {
   text-align: center;
   color: #333333;
   display: block;
+  margin: 10rem;
 }
 
 @media only screen and (max-width: 500px) {
@@ -103,7 +102,7 @@ footer {
   }
 
   .card-container {
-    height: 100%;
+    height: 50%;
     width: 100%;
     padding: 20px;
   }
